--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout this repo
+        uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
@@ -32,3 +33,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a docker hello-world
         run: docker run hello-world
+      
+      - name: Checkout TotalCross/totalcross
+        uses: actions/checkout@v2
+        with:
+          repository: https://github.com/TotalCross/totalcross.git
