--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Checkout TotalCross/totalcross
         uses: actions/checkout@v2
         with:
-          repository: https://github.com/TotalCross/totalcross.git
+          repository: TotalCross/totalcross
