--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,23 +18,12 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout this repo
-        uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a docker hello-world
-        run: docker run hello-world
-      
       - name: Checkout TotalCross/totalcross
         uses: actions/checkout@v2
         with:
           repository: TotalCross/totalcross
+          ref: master
