Show here are the files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,6 @@ jobs:
         with:
           repository: TotalCross/totalcross
           ref: master
+
+      - name: Show files
+        run: ls
