--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,15 +32,6 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v2
 
-    - name: Checkout TotalCross/totalcross
-      uses: actions/checkout@v2
-      with:
-        repository: TotalCross/totalcross
-        ref: master
-
-    - name: Set up Docker Buildx
-      uses: crazy-max/ghaction-docker-buildx@v3
-
     - name: Allow multiarch
       run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
      
@@ -50,7 +41,14 @@ jobs:
         cd ${{ matrix.project }} 
         docker build . --tag totalcross/${{ matrix.project }}
 
+    - name: Checkout TotalCross/totalcross
+      uses: actions/checkout@v2
+      with:
+        repository: TotalCross/totalcross
+        ref: master
+
     - name: Build TotalCross/totalcross
       run: |
+        mkdir -p ${{ matrix.project }}
         mkdir -p ${{ matrix.project }}/build
         docker run -v ${{ matrix.project }}/build:/build -v TotalCrossVM/:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources -G Ninja && ninja"
