--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,6 @@ jobs:
      
     - name: Build container
       run: |
-        ls
         cd ${{ matrix.project }} 
         docker build . --tag totalcross/${{ matrix.project }}
 
@@ -49,6 +48,6 @@ jobs:
 
     - name: Build TotalCross/totalcross
       run: |
-        mkdir -p ${{ matrix.project }}
-        mkdir -p ${{ matrix.project }}/build
-        docker run -v ${{ matrix.project }}/build:/build -v TotalCrossVM/:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources -G Ninja && ninja"
+        ls
+        mkdir -p build
+        docker run -v build:/build -v TotalCrossVM/:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources -G Ninja && ninja"
