--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,9 @@ jobs:
 
     - name: Build TotalCross/totalcross
       run: |
-        ls
         mkdir -p build
-        docker run -v build:/build -v TotalCrossVM/:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources -G Ninja && ninja"
+        docker run --rm \
+        -v build:/build \
+        -v TotalCrossVM:/sources \
+        -t totalcross/${{ matrix.project }} \
+        bash -c "cmake /sources -G Ninja && ninja"
