--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,4 +53,4 @@ jobs:
         -v build:/build \
         -v TotalCrossVM:/sources \
         -t totalcross/${{ matrix.project }} \
-        bash -c "cmake /sources -G Ninja && ninja"
+        bash -c "ls /sources && cmake /sources -G Ninja && ninja"
