--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
 name: Build and upload Zip TotalCross
 
 on:
-  schedule:
-    - cron: "0 3 * * 1-5"
   workflow_dispatch:
   push:
     branches: [ main ]
@@ -46,7 +44,7 @@ jobs:
         repository: TotalCross/totalcross
         ref: master
 
-    - name: Build TotalCross/totalcross
+    - name: Test build TotalCross/totalcross
       run: |
         mkdir -p build
         docker run --rm \
@@ -54,3 +52,14 @@ jobs:
         -v TotalCrossVM:/sources \
         -t totalcross/${{ matrix.project }} \
         bash -c "ls /sources"
+
+    - name: Login to DockerHub
+      if: ${{ success() }}
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Push to DockerHub
+      if: ${{ success() }}
+      run: docker push totalcross/${{ matrix.project }}:latest
