--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,7 @@ jobs:
       run: |
         ls TotalCrossVM
         mkdir -p build
-        docker run --rm \
-        -v build:/build \
-        -v TotalCrossVM:/sources \
-        -t totalcross/${{ matrix.project }} \
-        bash -c "cmake /sources -G Ninja && ninja"
+        docker run -v build:/build -v TotalCrossVM:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources -G Ninja && ninja"
 
     - name: Login to DockerHub
       if: ${{ success() }}
