--- a/linux-amd64/Dockerfile
+++ b/linux-amd64/Dockerfile
@@ -3,8 +3,8 @@ FROM amd64/ubuntu:bionic
 RUN apt-get update
 RUN apt-get install -y cmake ninja-build libsdl2-dev libfontconfig1-dev
 
-RUN mkdir sources
-
 ENV BUILD_FOLDER /build
 
 WORKDIR ${BUILD_FOLDER}
+
+CMD ["/bin/bash", "-c", "make", "-j$(($(nproc) + 2))", "-f", "${BUILD_FOLDER}/Makefile"]
