--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,8 @@ jobs:
 
     - name: Test build TotalCross/totalcross
       run: |
-        ls TotalCrossVM
         mkdir -p build
-        export BASEDIR=$(dirname $0)
-        export WORKDIR=$(cd $BASEDIR; pwd)
-        docker run -v ${WORKDIR}/build:/build -v ${WORKDIR}/TotalCrossVM:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources -G Ninja && ninja"
+        sudo docker run --rm -v build:/build -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
 
     - name: Login to DockerHub
       if: ${{ success() }}
@@ -76,16 +73,11 @@ jobs:
 
     - name: Test build TotalCross/totalcross
       run: |
-        ls TotalCrossVM
-        mkdir -p linux-${{ matrix.project }}
-        docker run --rm \
-        -v linux-${{ matrix.project }}:/build \
-        -v TotalCrossVM:/sources \
-        -t totalcross/${{ matrix.project }} \
-        bash -c "cmake /sources -G Ninja && ninja"
+        mkdir -p build
+        sudo docker run --rm -v build:/build -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
         name: linux-${{ matrix.project }}
-        path: linux-${{ matrix.project }}
+        path: build
