--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Test build TotalCross/totalcross
       run: |
         mkdir -p build
-        sudo docker run --rm -v build:/build -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
+        sudo docker run --rm -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
 
     - name: Login to DockerHub
       if: ${{ success() }}
@@ -74,7 +74,7 @@ jobs:
     - name: Test build TotalCross/totalcross
       run: |
         mkdir -p build
-        docker run --rm -v build:/build -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
+        docker run --rm -v ${PWD}/build:/build -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
