final test test test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Test build TotalCross/totalcross
       run: |
-        sudo docker run --rm -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
+        sudo docker run --rm -v ${PWD}:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
 
     - name: Login to DockerHub
       if: ${{ success() }}
@@ -72,11 +72,11 @@ jobs:
 
     - name: Test build TotalCross/totalcross
       run: |
-        mkdir -p linux-${{ matrix.project }}-build
-        docker run --rm -v ${PWD}/linux-${{ matrix.project }}-build:/build -v ${PWD}:/sources -t totalcross/linux-amd64 bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
+        mkdir -p build
+        docker run --rm -v ${PWD}/build:/build -v ${PWD}:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: linux-${{ matrix.project }}
-        path: linux-${{ matrix.project }}-build
+        name: ${{ matrix.project }}
+        path: build
