--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,18 +40,19 @@ jobs:
         sudo docker run --rm -v ${PWD}:/sources -t totalcross/${{ matrix.project }} bash -c "cmake /sources/TotalCrossVM -G Ninja && ninja"
 
     - name: Login to DockerHub
-      if: ${{ github.ref }} == 'refs/heads/master'
+      if: ${{ success() && github.event_name == 'push' && github.ref == 'refs/heads/master' }}
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push to DockerHub
+      if: ${{ success() && github.event_name == 'push' && github.ref == 'refs/heads/master' }}
       run: docker push totalcross/${{ matrix.project }}:latest
 
   test:
     name: Test '${{ matrix.project }}' container
-    if: ${{ github.ref }} == 'refs/heads/master'
+    if: ${{ success() && github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     needs: build
     strategy:
       fail-fast: false
