amd64: include git and perform cleanup

--- a/linux-amd64/Dockerfile
+++ b/linux-amd64/Dockerfile
@@ -1,7 +1,14 @@
 FROM amd64/ubuntu:bionic
 
-RUN apt-get update
-RUN apt-get install -y cmake ninja-build libsdl2-dev libfontconfig1-dev
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        cmake \
+        ninja-build \
+        libsdl2-dev \
+        libfontconfig1-dev \
+        git \
+        ca-certificates; \
+    apt-get clean
 
 ENV BUILD_FOLDER /build
 
