amd64: no-install-recommends broke the build

--- a/linux-amd64/Dockerfile
+++ b/linux-amd64/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         cmake \
         ninja-build \
+        build-essential \
         libsdl2-dev \
         libfontconfig1-dev \
         git \
