--- a/linux-amd64/Dockerfile
+++ b/linux-amd64/Dockerfile
@@ -1,10 +1,9 @@
 FROM amd64/ubuntu:bionic
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
+    apt-get install -y \
         cmake \
         ninja-build \
-        build-essential \
         libsdl2-dev \
         libfontconfig1-dev \
         git \
